--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.portpolio.aragada">
 
-    <uses-permission android:name = "android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        tools:replace="android:icon"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Aragada">
+        android:theme="@style/Theme.Aragada"
+        tools:replace="android:icon">
+        <activity
+            android:name=".ChatBotActivity"
+            android:exported="false" />
         <activity
             android:name=".TestActivity"
             android:exported="false" />
@@ -31,7 +34,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
