--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
+
 
 android {
     compileSdk 31
@@ -34,6 +36,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.rmtheis:tess-two:9.1.0'
+    implementation 'com.google.gms:google-services:4.3.10'
+    implementation 'com.google.firebase:firebase-bom:30.1.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
