--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.google.gms:google-services:4.3.10'
     implementation 'com.google.firebase:firebase-bom:30.1.0'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
+    implementation 'io.github.shashank02051997:FancyToast:2.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
